--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,13 @@ i {
 .fa-print:hover, .fa-comment:hover {
     color: #1f428a;
 }
+
+.icons {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.icons li {
+    display: inline;
+}
